# wbparser

./: .gitignore  Dockerfile  Makefile  Readme.md  docker-compose.yaml  env.tmpl  pyproject.toml
.github/workflows/: main.yml
src/: alembic.ini  convert_csv.py  initial_data.py  main.py  main_bot.py  start.sh  test_parser.py
src/alembic/: env.py
src/alembic/versions/: 192266bd83e7_add_saleobject_and_officeobject_tables.py  2b741b05d1a6_initial.py  446dbb27c428_make_created_at_index_and_office_id_.py  5d857f1d71be_.py  84153a08c3db_add_office_speed_sum_field_to_saleobject.py  8463e7e99e71_remove_unique_office_id.py  84bc6682f410_.py  94c08ee5ba68_office_area_in_officeobject_changed_to_.py  afa9f3aca061_add_name_to_officeobject.py  c14acaa13ef7_updated_saleobject_model.py  e11ac7c90b48_.py  eab151538217_change_office_rating_and_percent_to_.py  ec308052fd0f_add_saleobject_table.py  efbd848c3310_.py  f1ee703264cc_add_table_officeratingobject.py
src/bot/: Readme.md  bot_init.py  logger.py  message_texts.py  utility.py
src/db/: base_class.py  db.py  session.py
src/parser/: api.py  auth_api.py  auth_fr.py  auth_lk.py  column_names.py  constants.py  data_processing.py  models.py  schemas.py  service.py
src/utils/: env.py
